--- a/boston-checkpoint.ipynb
+++ b/boston-checkpoint.ipynb
@@ -255,6 +255,12 @@
     }
    ],
    "source": [
+    "                 #Business Understanding\n",
+    "#understanding the business model and came up with below questions to answer.\n",
+    "#Q1:What are the most common amenities and most popular and least popular among them?\n",
+    "#Q2: What attracts the guests most for renting a property in 30, 60, 90 booking days buckets?\n",
+    "#Q3: What are the most influential features of the dataset to estimate the price of a listing  \n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -268,6 +274,7 @@
     "import math\n",
     "%matplotlib inline\n",
     "\n",
+    "# Data Understanding\n",
     "df_boston = pd.read_csv('listings_boston.csv')\n",
     "\n",
     "df_boston.head()"
@@ -758,6 +765,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "EValuation and Visulaization is complete in below step with detaliled understanding of problem.\n",
     "Q1\n",
     "What are the most common amenities and most popular and least popular among them?"
    ]
@@ -896,6 +904,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "EValuation and Visulaization is complete in below step with detaliled understanding of problem.\n",
     "Q2\n",
     "\n",
     "When I deepdive into the dataset different columns, I see some important features of listigs. Some of these features have separate columns (for example property_type or room_type) and some of these features are in **amenities** column. What I would like to know about this dataset is, \"What attracts the guests most for renting a property?\". I will try to answer this question below.\n",
@@ -2041,6 +2050,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "EValuation and Visulaization is complete in below step with detaliled understanding of problem.\n",
     "Q3\n",
     "\n",
     "There are so many features in the dataset, that has effect on the price of the listing. In the third question I would like to train a model to estimate the price of a listing. So the question I would like to answer is: How can we estimate the price of a listing, what are the most influencial features of the dataset to estimate the price of a listing."
